<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LinearLayout"
    android:orientation="vertical">

    <TextView
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/linear_layout"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textAlignment="center"
        />
    <Button
        android:id="@+id/toConstraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_constraint_layout"/>
    <Button
        android:id="@+id/toRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_relative_layout"/>


</LinearLayout>